修复审查问题并恢复赞助入口
Co-Authored-By: Codex <codex@openai.com>